@@ -8,6 +8,7 @@ Changes from 0.13.0
    [ Bug Fixes ]
    * Numeric literals are no longer parsed as symbols when followed by a dot
      and a symbol
+   * Hy now respects the environment variable PYTHONDONTWRITEBYTECODE
 
 Changes from 0.12.1
 
